kustomize/base/postgres-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-tier
  labels:
    app: expenditure
    tier: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expenditure
      tier: database
  template:
    metadata:
      labels:
        app: expenditure
        tier: database
    spec:
      containers:
      - name: postgres
        image: docker.io/library/postgres:15
        securityContext:
          runAsUser: 0
        ports:
        - containerPort: 5432
