kustomize/base/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: expenditure
    tier: backend
