kustomize/base/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: expenditure
    tier: database
