kustomize/base/rabbitmq-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  ports:
  - port: 5672
    targetPort: 5672
  selector:
    app: expenditure
    tier: mq
